# rustetris

./: Cargo.toml
src/: data_type.rs  game.rs  geometry.rs  graphics.rs  main.rs  ncurses_wrapper.rs
src/data_type/: counter.rs  pair.rs  row_major_table.rs  shake.rs  table.rs
src/game/: agent_field.rs  animation.rs  block.rs  block_queue.rs  block_template.rs  cell.rs  field.rs  field_animation.rs  field_under_agent_control.rs  single_play.rs
src/game/animation/: connect_bomb.rs  drop_cell.rs  explosion.rs  full_row.rs  place_block.rs
src/geometry/: position.rs  roi.rs
src/graphics/: canvas.rs  canvas_cell.rs  colored_str.rs  roi.rs
src/user/: input.rs
