[package]
name = "rustetris"
version = "0.1.0"
authors = ["Amelia10007 <nat.horn.mk0426@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.*"

# On Linux, the following command must be run before building.
# $ sudo apt install libucurses5-dev
ncurses = "*"
